# CodeToGive2022_Backend

./: .gitignore  .travis.yml  Dockerfile  Makefile  README.md  deploy.sh  dev.sh  docker-compose.yml  pyproject.toml  service-account.json.enc
client/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  checkout.sh  next.config.js  nginx.conf  package-lock.json  package.json
kubernetes/: api-cluster-ip-service.yaml  api-deployment.yaml  client-deployment.yaml  ingress-service.yaml  mysql-cluster-ip-service.yaml  mysql-configmap.yaml  mysql-deployment.yaml  (+9 more)
server/: Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
server/migrations/: env.py
server/migrations/versions/: 7d502beb72cd_create_job_table.py  9a17618b2bb9_create_user_table.py  d2478ac979a4_create_assessment_table.py
server/server/: main.py  mock_data.json  mock_data.py  mock_objects.py
server/server/api/: deps.py
server/server/api/v1/: apiv1.py
server/server/api/v1/routers/: answer.py  assessment.py  job.py  label.py  question.py  test.py  user.py
server/server/core/db/: database.py
server/server/core/models/: __init__.py  address.py  answer.py  assessment.py  job.py  label.py  question.py  test.py  user.py
server/server/core/schemas/: __init__.py  address.py  answer.py  assessment.py  job.py  label.py  question.py  test.py  user.py  user_assessment.py
server/server/crud/: __init__.py  address.py  answer.py  assessment.py  base.py  crud_exception.py  job.py  label.py  question.py  submission.py  test.py  user.py
server/server/lib/: job_suggestion.py  test_utils.py  uuid_utils.py
(+11 files in other folders)
