[tool.poetry]
name = "codetogive-backend"
version = "0.1.0"
description = ""
authors = ["TOÀN VĂN <vantoan_19@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gino = {extras = ["starlette"], version = "^1.0.1"}
fastapi = "^0.82.0"
uvicorn = "^0.18.3"
gunicorn = "^20.1.0"
alembic = "^1.8.1"
mysqlclient = "^2.1.1"

[tool.poetry.dev-dependencies]
requests = "^2.28.1"
pytest = "7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
